--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Layout con Flexbox</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/67714e5665.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -19,13 +20,41 @@
 				<a href="#">Contacto</a>
 			</nav>
 		</header>
-
+		<aside>
+			<div class="ad">
+				<h4>CONTACTO</h4>
+				<p><i class="fas fa-mobile"></i> (+57) 321 907 1059</p>
+				<p><i class="fas fa-map-marker-alt"></i> Borrero Ayerbe</p>
+				<p> <i class="fas fa-envelope"></i> jimcostdev@gmail.com</p>
+				<p><i class="fas fa-link"></i> </i> <a href="http://www.jimcostdev.com" target="_blank">www.jimcostdev.com</a></p>
+			</div>
+			<div class="ad">
+				<h4>REDES SOCIALES</h4>
+				<p><i class="fab fa-github"></i> </i> <a href="https://github.com/JimcostDev" target="_blank">@JimcostDev</a></p>
+				<p><i class="fab fa-instagram"></i> </i> <a href="https://www.instagram.com/jimcostdev" target="_blank">@jimcostdev</a></p>
+				<p><i class="fab fa-twitter"></i> </i> <a href="https://twitter.com/JimcostDev" target="_blank">@JimcostDev</a></p>
+				<p><i class="fab fa-linkedin"></i> </i> <a href="https://www.linkedin.com/in/ronaldo-jimenez" target="_blank">@ronaldo-jimenez</a></p>
+			</div>
+			<div class="ad">
+				<h4>HABILIDADES</h4>
+				<p> <i class="fab fa-figma"></i> Figma</p>
+				<p> <i class="fas fa-database"></i> SQL</p>
+				<p> <i class="fab fa-git-alt"></i> Git</p>
+				<p> <i class="fab fa-windows"></i> C# & .NET</p>
+				<p> <i class="fab fa-python"></i> Python</p>
+			</div>
+			<div class="ad">
+				<h4>REFERENCIAS</h4>
+				<p> <i class="fas fa-envelope"></i> sistemas@utap.edu.co</p>
+				<p> <i class="fas fa-envelope"></i> cbalanta@utap.edu.co</p>
+			</div>
+		</aside>
 		<section class="main">
 			<article>
 				<div class="thumb">
 					<img src="img/thumb.jpg" alt="">
 				</div>
-				<h2>Titulo del Articulo</h2>
+				<h2>RONALDO JIMÉNEZ ACOSTA</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -42,15 +71,7 @@
 			</article>
 		</section>
 
-		<aside>
-			<div class="ad">
-				<p>AD</p>
-			</div>
-
-			<div class="ad">
-				<p>AD</p>
-			</div>
-		</aside>
+		
 
 		<footer>
 			<div class="autor">
