--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 			</div>
 			<div class="ad">
 				<h4>REFERENCIAS</h4>
-				<p> <i class="fas fa-envelope"></i> sistemas@utap.edu.co</p>
-				<p> <i class="fas fa-envelope"></i> cbalanta@utap.edu.co</p>
+				<p> <i class="fas fa-envelope"></i> correo@correo.com</p>
+				<p> <i class="fas fa-envelope"></i> correo2@correo.com</p>
 			</div>
 		</aside>
 		<section class="main">
