--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portafolio profesional de Ronaldo Jiménez - Desarrollador Full Stack">
     <meta name="keywords" content="desarrollo web, python, astro, portfolio, programación">
-    <title>JimcostDev | Portfolio Profesional</title>
+    <title>JimcostDev | Software Engineer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
